--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,8 @@ button {
 
 .header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .header .div {
@@ -86,6 +88,23 @@ button {
   padding: 24px 0;
 }
 
+.header .div .nav .menu .link.link-first {
+  position: relative;
+  color: #404bbf;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header .div .nav .menu .link.link-first::after {
+  content: "";
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
+}
+
 .header .div .nav .menu .link:hover,
 .header .div .nav .menu .link:focus {
   color: #404bbf;
@@ -102,6 +121,7 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header .div .address .link:hover,
@@ -112,6 +132,15 @@ button {
 .top {
   background-color: #2e2f42;
   padding: 188px 0;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/office.jpg);
+  max-width: 1440px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .top .container .title {
@@ -141,6 +170,7 @@ button {
   border-radius: 4px;
   cursor: pointer;
   margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .top .container .button:hover,
@@ -148,7 +178,7 @@ button {
   background-color: #404bbf;
 }
 
-.features {
+.advantages {
   padding: 120px 0;
 }
 
@@ -165,16 +195,32 @@ button {
   overflow: hidden;
 }
 
-.features .cards {
+.advantages .cards {
   display: flex;
   gap: 24px;
 }
 
-.features .cards .card {
+.advantages .cards .card {
   width: calc((100% - 72px) / 4);
 }
 
-.features .cards .card .title {
+.advantages .cards .card .icons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  margin-bottom: 8px;
+  border: 1px solid;
+}
+
+.advantages .cards .card .icons .icon {
+  width: 64px;
+  height: 64px;
+}
+
+.advantages .cards .card .title {
   margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
@@ -183,7 +229,7 @@ button {
   color: #2e2f42;
 }
 
-.features .cards .card .text {
+.advantages .cards .card .text {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
@@ -214,6 +260,8 @@ button {
   background-color: #ffffff;
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team .container .cards .card .info {
@@ -235,6 +283,38 @@ button {
   letter-spacing: 0.02em;
   color: #434455;
   text-align: center;
+}
+
+.team .container .cards .card .info .social-media {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.team .container .cards .card .info .social-media .element {
+  width: 40px;
+  height: 40px;
+}
+
+.team .container .cards .card .info .social-media .element .link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.team .container .cards .card .info .social-media .element .link:hover,
+.team .container .cards .card .info .social-media .element .link:focus {
+  background-color: #404bbf;
+}
+
+.team .container .cards .card .info .social-media .element .link .icon {
+  width: 16px;
+  height: 16px;
+  fill: #f4f4fd;
 }
 
 .portfolio {
@@ -262,6 +342,11 @@ button {
 
 .portfolio .container .cards .card {
   width: calc((100% - 48px) / 3);
+}
+
+.portfolio .container .cards .card:hover {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .portfolio .container .cards .card .info {
