--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,7 @@ button {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  margin: auto;
 }
 
 .top .container .title {
@@ -213,11 +214,6 @@ button {
   border-radius: 4px;
   margin-bottom: 8px;
   border: 1px solid;
-}
-
-.advantages .cards .card .icons .icon {
-  width: 64px;
-  height: 64px;
 }
 
 .advantages .cards .card .title {
@@ -294,6 +290,7 @@ button {
 .team .container .cards .card .info .social-media .element {
   width: 40px;
   height: 40px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team .container .cards .card .info .social-media .element .link {
@@ -342,11 +339,38 @@ button {
 
 .portfolio .container .cards .card {
   width: calc((100% - 48px) / 3);
+  transition: ;
 }
 
 .portfolio .container .cards .card:hover {
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  transform: ;
+}
+
+.portfolio .container .cards .card .picture {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio .container .cards .card .picture .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio .container .cards .card .picture:hover .overlay {
+  transform: translateY(0);
 }
 
 .portfolio .container .cards .card .info {
@@ -373,6 +397,54 @@ button {
 .footer {
   background-color: #2e2f42;
   padding: 100px 0;
+}
+
+.footer .container {
+  display: flex;
+  align-items: baseline;
+}
+
+.footer .container .row {
+  margin-right: 120px;
+}
+
+.footer .container .row-social .title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+
+.footer .container .row-social .social-media {
+  display: flex;
+  gap: 16px;
+}
+
+.footer .container .row-social .social-media .element {
+  width: 40px;
+  height: 40px;
+}
+
+.footer .container .row-social .social-media .element .link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer .container .row-social .social-media .element .link:hover,
+.footer .container .row-social .social-media .element .link:focus {
+  background-color: #31d0aa;
+}
+
+.footer .container .row-social .social-media .element .link .icon {
+  fill: #f4f4fd;
 }
 
 .footer .logo {
