--- a/css/styles.css
+++ b/css/styles.css
@@ -290,7 +290,6 @@ button {
 .team .container .cards .card .info .social-media .element {
   width: 40px;
   height: 40px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team .container .cards .card .info .social-media .element .link {
@@ -301,6 +300,7 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team .container .cards .card .info .social-media .element .link:hover,
@@ -339,13 +339,12 @@ button {
 
 .portfolio .container .cards .card {
   width: calc((100% - 48px) / 3);
-  transition: ;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio .container .cards .card:hover {
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-  transform: ;
 }
 
 .portfolio .container .cards .card .picture {
