--- a/css/styles.css
+++ b/css/styles.css
@@ -339,7 +339,7 @@ button {
 
 .portfolio .container .cards .card {
   width: calc((100% - 48px) / 3);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio .container .cards .card:hover {
